--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "npm init template for bootstrapping an empty Colyseus project",
   "main": "src/index.js",
   "scripts": {
-    "client-dev": "webpack --mode development",
+    "client-dev": "webpack --mode development --watch",
     "server-dev": "node src/index.js"
   },
   "author": "",
@@ -30,8 +30,9 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-dev-server": "^4.13.3",
+    "webpack-merge": "^5.8.0",
+    "webpack-watch-files-plugin": "^1.2.1"
   },
   "dependencies": {
     "@babylonjs/gui": "^5.54.0",
